unpackaged/main/default/objects/Account/fields/another_checkbox__c.field-meta.xml
<CustomField>
    <fullName>another_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>another checkbox</label>
    <type>Checkbox</type>
</CustomField>