unpackaged/main/default/objects/Account/fields/confused_test__c.field-meta.xml
<CustomField>
    <fullName>confused_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>confused test</label>
    <type>Checkbox</type>
</CustomField>