unpackaged/main/default/objects/Account/fields/Customer_segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_segment__c</fullName>
    <formula>IF( Strategic__c , &quot;Enterprise&quot;,
IF( ISPICKVAL( Type , &quot;Implementation Partner&quot;), &quot;Implementation Partner&quot;,
IF( ISPICKVAL( Type , &quot;Prospect - Implementation Partner&quot;), &quot;Implementation Partner&quot;,
IF( ISPICKVAL( Type , &quot;Implementation Partner - Free&quot;), &quot;Implementation Partner&quot;,
IF( NumberOfEmployees = 0, &quot;&quot;,
IF( NumberOfEmployees &lt; 500, &quot;SMB&quot;,
IF( NumberOfEmployees &lt; 10000, &quot;MidMarket&quot;,
&quot;Enterprise&quot;)
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>