unpackaged/main/default/objects/Account/fields/Data_destroyer_del__c.field-meta.xml
<CustomField>
    <fullName>Data_destroyer_del__c</fullName>
    <displayFormat>PO# {00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Data destroyer</label>
    <type>AutoNumber</type>
</CustomField>