unpackaged/main/default/objects/Account/fields/DiscountMarketRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountMarketRate__c</fullName>
    <label>DiscountMarketRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>