unpackaged/main/default/objects/Account/fields/Ferg_field__c.field-meta.xml
<CustomField>
    <fullName>Ferg_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ferg field</label>
    <type>Checkbox</type>
</CustomField>