unpackaged/main/default/objects/Account/fields/hotfix_test_2__c.field-meta.xml
<CustomField>
    <fullName>hotfix_test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hotfix test 2</label>
    <type>Checkbox</type>
</CustomField>