unpackaged/main/default/objects/Account/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <complianceGroup>HIPAA;GDPR</complianceGroup>
    <displayFormat>ID# {000000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>