unpackaged/main/default/objects/Account/fields/Jira_test__c.field-meta.xml
<CustomField>
    <fullName>Jira_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jira test</label>
    <type>Checkbox</type>
</CustomField>