unpackaged/main/default/objects/Account/fields/marias_pipeline__c.field-meta.xml
<CustomField>
    <fullName>marias_pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>marias pipeline</label>
    <type>Checkbox</type>
</CustomField>