unpackaged/main/default/objects/Account/fields/merge_release_test__c.field-meta.xml
<CustomField>
    <fullName>merge_release_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>merge release test</label>
    <type>Checkbox</type>
</CustomField>