unpackaged/main/default/objects/Account/fields/pipe_dryrun__c.field-meta.xml
<CustomField>
    <fullName>pipe_dryrun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pipe dryrun</label>
    <type>Checkbox</type>
</CustomField>