unpackaged/main/default/objects/Account/fields/Pipe_test_2__c.field-meta.xml
<CustomField>
    <fullName>Pipe_test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipe test 2</label>
    <type>Checkbox</type>
</CustomField>