unpackaged/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>30 digit serial number for SLA</description>
    <inlineHelpText>30 digit minimum</inlineHelpText>
    <label>SLA Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>