unpackaged/main/default/objects/Account/fields/Total_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Value__c</fullName>
    <label>Total Account Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>