unpackaged/main/default/objects/Account/fields/Who_is_SM__c.field-meta.xml
<CustomField>
    <fullName>Who_is_SM__c</fullName>
    <description>Who is the responsible Site Manager for this account</description>
    <label>Who is SM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ben</fullName>
            </value>
            <value>
                <fullName>Bonnie</fullName>
            </value>
            <value>
                <fullName>Glenn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>