unpackaged/main/default/objects/Account/fields/X270223_demo_test__c.field-meta.xml
<CustomField>
    <fullName>X270223_demo_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>270223 demo test</label>
    <type>Checkbox</type>
</CustomField>