unpackaged/main/default/objects/Account/fields/X2802_demo_box__c.field-meta.xml
<CustomField>
    <fullName>X2802_demo_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2802 demo box</label>
    <type>Checkbox</type>
</CustomField>