unpackaged/main/default/objects/Account/fields/X28_release_2__c.field-meta.xml
<CustomField>
    <fullName>X28_release_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>28 release 2</label>
    <type>Checkbox</type>
</CustomField>