unpackaged/main/default/objects/Account/validationRules/Enforce_minimum_Account_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_minimum_Account_info</fullName>
    <active>false</active>
    <description>Basic info requirements from Sales management for Accounts in the system.</description>
    <errorConditionFormula>AND(

  Owner.IsActive  = false &amp;&amp; ISBLANK( Description ),

ISBLANK (  NumberOfEmployees  ),

ISBLANK (   BillingCountry   ),

ISPICKVAL( Industry ,&#39;Other&#39;)

)</errorConditionFormula>
    <errorMessage>Minimum Account info not complete. Check: Account Owner is current user, Description, Employees, Billing Country and Industry is not equal to &#39;Other&#39;. Try again!</errorMessage>
</ValidationRule>